[package]
name = "catj"
version = "0.0.0"
edition = "2021"

authors = ["XLor yjl9903@vip.qq.com"]
license = "MIT"

categories = ["command-line-utilities"]
homepage = "https://github.com/yjl9903/CatBox"
repository = "https://github.com/yjl9903/CatBox"
keywords = ["sandbox"]
readme = "README.md"
description = "A light process isolation sandbox used for competitive programming contest"

[dependencies]
cgroups-rs = "0.3.0"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
flexi_logger = "0.24.2"
libc-stdhandle = "0.1.0"
log = "0.4"
nix = { version = "0.26.2", features = ["signal", "process", "user"] }
tempfile = "3"
