[package]
name = "catj"
version = "0.0.0"
authors = ["XLor yjl9903@outlook.com"]
edition = "2021"

description = "A light process isolation sandbox used for competitive programming contest"
readme = "README.md"
homepage = "https://github.com/yjl9903/CatBox"
repository = "https://github.com/yjl9903/CatBox"
license = "MIT"
keywords = ["sandbox", "cli"]
categories = ["command-line-utilities"]

[dependencies]
cgroups-rs = "0.3.0"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
flexi_logger = "0.24.2"
lazy_static = "1.4.0"
libc-stdhandle = "0.1.0"
log = "0.4"
nix = { version = "0.26.2", features = ["signal", "process", "ptrace", "user"] }
tempfile = "3"
remove_dir_all = "0.7.0"
