[package]
name = "catj"
version = "0.2.2"
authors = ["XLor yjl9903@outlook.com"]
edition = "2021"

description = "A light process isolation sandbox used for competitive programming contest"
readme = "README.md"
homepage = "https://github.com/CaCatHead/CatBox"
repository = "https://github.com/CaCatHead/CatBox"
license = "MIT"
keywords = ["sandbox", "cli"]
categories = ["command-line-utilities"]

[dependencies]
cgroups-rs = "0.3.3"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
flexi_logger = "0.27.2"
lazy_static = "1.4.0"
libc-stdhandle = "0.1.0"
log = "0.4.20"
nix = { version = "0.26.2", features = ["signal", "process", "ptrace", "user"] }
path-absolutize = "3.1.1"
remove_dir_all = "0.8.2"
tempfile = "3.8.0"
